--- a/tex/modules/6-G/sections/3.tex
+++ b/tex/modules/6-G/sections/3.tex
@@ -9,26 +9,13 @@
     M^{-1}=\begin{bmatrix}-2&1\\3/2&-1/2\end{bmatrix}
   \]
 
-\ \\
+\vspace{1em}
 
-  Compute \(\det(M)\) and \(\det(M^{-1})\).
-\end{activity}
-
-\begin{activity}{5}
-  Suppose the matrix \(M\) is invertible, so there exists \(M^{-1}\)
-  with \(MM^{-1}=I\). It follows that \(\det(M)\det(M^{-1})=\det(I)\).
-
-\ \\
-
-  What is the only number that \(\det(M)\) cannot equal?
-  \begin{multicols}{4}
-  \begin{enumerate}[(a)]
-  \item \(-1\)
-  \item \(0\)
-  \item \(1\)
-  \item \(\frac{1}{\det(M^{-1})}\)
-  \end{enumerate}
-  \end{multicols}
+  Compute \(\det(M)\) and \(\det(M^{-1})\)
+  using the formula
+\[
+  \det\begin{bmatrix}a & b \\ c & d\end{bmatrix}=ad-bc
+\]
 \end{activity}
 
 \begin{fact}
