a few more G.2 tweaks to deemphasize formulas/algorithms

--- a/tex/modules/6-G/sections/2.tex
+++ b/tex/modules/6-G/sections/2.tex
@@ -149,7 +149,7 @@ Thus we can also use row operations to simplify determinants:
 
 \begin{fact}
   Applying that same process to a generalized \(2\times 2\)
-  matrix gives us a convenient formula:
+  matrix gives us the formula memorized in many math classes:
     \begin{align*}
     \det\begin{bmatrix} a & b \\ c & d \end{bmatrix}
   &=
@@ -175,7 +175,7 @@ Thus we can also use row operations to simplify determinants:
 \end{fact}
 
 \begin{remark}
-In higher dimensions, the formulas become unreasonable.  
+But memorizing formulas quickly becomes unmanageable.
 For example, part of the formula for \(4\times4\) matrices looks like this:
 \[
   \det\begin{bmatrix}
@@ -380,7 +380,7 @@ a \(1\) on the diagonal.
   by doing the following:
   \begin{itemize}
   \item Reduce its dimension by eliminating a row and column.
-  \item Use the formula for \(2\times 2\) determinants.
+  \item Evaluate the resulting \(2\times 2\) determinant.
   \end{itemize}
 \end{activity}
 
@@ -411,6 +411,7 @@ a \(1\) on the diagonal.
       \det \begin{bmatrix} 1 & 2 & 3 \\ 0 & -2 & -5 \\ 0 & 3 & 3 \end{bmatrix}   
       +\det \begin{bmatrix} 0 & 2 & 3 \\ 1 & -2 & -5 \\ 0 & 3 & 3 \end{bmatrix}   
     \) 
+    \item Reduce each of these to a \(2\times 2\) determinant.
   \end{itemize}
 \end{activity}
 
