--- a/tex/modules/6-G/sections/3.tex
+++ b/tex/modules/6-G/sections/3.tex
@@ -29,21 +29,38 @@
 \end{fact}
 
 \begin{observation}
-Consider the linear transformation $A : \IR^2 \rightarrow \IR^2$ given by the matrix $A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}$
+Consider the linear transformation \(A : \IR^2 \rightarrow \IR^2\) 
+given by the matrix \(A = \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}\).
 
 \begin{center}
 \begin{tikzpicture}[scale=0.75]
+\fill[red!50] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-1,0)-- (4,0);
 \draw[thin,gray,<->] (0,-1)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A \vec{e}_1$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- node[below right] {$A \vec{e}_1$}++ (2,0);
+\draw[thick,red,->] (0,0) -- node[below] {$\vec{e}_1$}++ (1,0);
 \draw[thick,blue,->] (0,0) -- node[above left] {$A \vec{e}_2$}++(2,3);
+\draw[thick,red,->] (0,0) -- node[left] {$\vec{e}_2$}++ (0,1);
 \draw[blue,dashed] (2,0) -- (4,3) -- (2,3);
+\draw[purple!50!blue,thick,->] (0,0) -- (6,3);
+\draw[purple!50!red,thick,->] (0,0) -- (2,1);
 \end{tikzpicture}
 \end{center}
-It is easy to see geometrically that  $$ A\begin{bmatrix}1 \\ 0 \end{bmatrix} = \begin{bmatrix}2 \\ 0 \end{bmatrix}= 2 \begin{bmatrix}1 \\ 0 \end{bmatrix}$$
+It is easy to see geometrically that
+\[
+  A\begin{bmatrix}1 \\ 0 \end{bmatrix} = 
+  \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}\begin{bmatrix}1 \\ 0 \end{bmatrix}=
+  \begin{bmatrix}2 \\ 0 \end{bmatrix}= 
+  2 \begin{bmatrix}1 \\ 0 \end{bmatrix}
+\]
 
-It is less obvious (but easily verified by computation) that
-$$A\begin{bmatrix} 2 \\ 1 \end{bmatrix} = \begin{bmatrix} 6 \\ 3 \end{bmatrix} = 3\begin{bmatrix} 2 \\ 1 \end{bmatrix}$$
+It is less obvious (but easily checked once you find it) that
+\[
+  A\begin{bmatrix} 2 \\ 1 \end{bmatrix} = 
+  \begin{bmatrix} 2 & 2 \\ 0 & 3 \end{bmatrix}\begin{bmatrix}2 \\ 1 \end{bmatrix}=
+  \begin{bmatrix} 6 \\ 3 \end{bmatrix} = 
+  3\begin{bmatrix} 2 \\ 1 \end{bmatrix}
+\]
 \end{observation}
 
 \begin{definition}Let $A \in \IR^{n \times n}$.
