Update G part 2, addresses #70

--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -149,7 +149,7 @@ This section introduces students to the notions of injectivity and surjectivity.
 This section is devoted to a deeper study of injectivity and surjectivity.  Activity 4.6 is the crucial activity here; instructors must be sure to allot at least 15 minutes for the teams to sort the statements, and likely 5-10 minutes for reporting and discussion.  We often facilitate reporting on this activity by (after students have sorted the statements into two lists on their whiteboards) asking which statements were easiest to sort; the answer is typically A and F.  Teams will almost always have paired B-E and C-D together, which is our next point of discussion; finally, we move to the most difficult, G and H.  Many classes will deduce Fact 4.10 on their own during the discussion of Activities 4.8 and 4.9.  Activity 4.11 serves as a good barometer of where teams are at.  Teams keeping up with everything will, when presented with only Part 1, deduce all 3 parts in about a minute; teams that are lagging in their understanding will need closer to 5 minutes for all three parts.  When discussing Activity 4.12, instructors are advised to point out how we will use property (c) in the next module to construct inverse maps.  Some classes, due to extended discussion on Activity 4.6, do not have time for Activities 4.14-4.17; we advise instructors that it is more important to spend the time on 4.6.
 
 \subsection*{Module 5-M: Algebraic structure of matrices}
-This module introduces students to matrix multiplication and invertible matrices, motivated through the lens of linear transformations.  Many students at this level have seen matrix multiplication in an algorithmic sense (i.e. compute the dot product of rows with columns); we avoid this in favor of emphasizing that the raison d'\^{e}tre of matrix multiplication is the composition of linear transformations.
+This module introduces students to matrix multiplication and invertible matrices, motivated through the lens of linear transformations.  Many students at this level have seen matrix multiplication in an algorithmic sense (i.e. compute the dot product of rows with columns); while in the past we mentioned this technique, we now avoid this in favor of emphasizing that the raison d'\^{e}tre of matrix multiplication is the composition of linear transformations.  This change in approach led to a doubling in student success on their first assessment of matrix multiplication.
 
 
 RAT answers (IF-AT card B005, 41-50):
@@ -174,10 +174,10 @@ RAT answers (IF-AT card B005, 41-50):
 This section develops matrix multiplication as the standard matrix corresponding to the composition of two linear transformations.  The readiness assurance process is crucial here to make sure students can proceed through Activities 1.1-1.4.  Activity 1.4 is carefully  scaffolded to encourage students to view matrix multiplication as taking appropriate linear combinations of columns. 
 
 \subsubsection*{Part 2}
-Activity 2.2 ideally belongs with part 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.
+Activity 2.2 ideally belongs with part 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.  
 
 \subsubsection*{Part 3}
-This part is devoted to the notion of invertibility.  Activity 3.1 is a callback to Activity A.4.6 and A.4.12.   After the definition of invertibility, Activity 3.3 shows students that they already know how to compute the standard matrix of the inverse map.  
+This part is devoted to the notion of invertibility.  Activity 3.1 is a callback to Activity A.4.6 and A.4.12.  After students compile their lists, we recommend asking them to circle the 3 that were easiest to categorize to help facilitate the inter-team discussion.   After the definition of invertibility, Activity 3.3 shows students that they already know how to compute the standard matrix of the inverse map.  Some students will view Activity 3.8 as a ``cruel trick'' after doing a needless calculation for part 1; we find the ``Aha!'' moment as students discover they did needless work invaluable in cementing the notion of an inverse map as ``undoing'' the original map.
 
 \subsection*{Module 6-G: Geometric properties of linear maps}
 
